# semantic-kernel

./: *  ,  .agi_file_config.json  .dockerignore  .editorconfig  .env.local  .env.local.template  .env.template  .gitattributes  .github  .gitignore  .gitmodules  .nuget.config.swp  .pre-commit-config.yaml  .vscode-janus-debug  .work-folder-info  10-configuration  11-automation-scripts  12-documentation  13-testing  14-runtime  15-web-ui  16-extensions  17-temporary  18-data  =1.24.0  =4.30.0  AGI_AUTO_SETUP_COMPLETE.md  AGI_AUTO_SETUP_GUIDE.md  AGI_Analysis_Notebook.ipynb  AGI_CHAT_GUIDE.md  AGI_CHAT_README.md  AGI_COMMANDS.md  AGI_ENHANCED_SYSTEM_README.md  AGI_GPU_SETUP_COMPLETE.md  AGI_LOCAL_SETUP_COMPLETE.md  AGI_ULTRA_EFFICIENT_GUIDE.md  AGI_ULTRA_IMPLEMENTATION_SUMMARY.md  AI_AGI_DEVELOPMENT_STATUS_REPORT.md  AI_MARKDOWN_GUIDE.md  (+358 more)
multi_agent_sample/python/: pyproject.toml
multi_agent_sample/python/tests/: test_agent.py
python/: .coveragerc  .cspell.json  .env.example  .pre-commit-config.yaml  DEV_SETUP.md  Makefile  README.md  mypy.ini  pyproject.toml
python/.conf/: flake8.cfg
python/notebooks/: 00-getting-started.ipynb  08-native-function-inline.ipynb  09-groundedness-checking.ipynb  10-multiple-results-per-prompt.ipynb
python/samples/concepts/: README.md
python/samples/demos/: README.md
python/samples/getting_started/: 00-getting-started.ipynb  01-basic-loading-the-kernel.ipynb  02-running-prompts-from-file.ipynb  03-prompt-function-inline.ipynb  04-kernel-arguments-chat.ipynb  05-memory-and-embeddings.ipynb  05-using-the-planner.ipynb  06-memory-and-embeddings.ipynb  07-native-function-inline.ipynb  08-groundedness-checking.ipynb  08-native-function-inline.ipynb  09-groundedness-checking.ipynb  09-multiple-results-per-prompt.ipynb  10-multiple-results-per-prompt.ipynb  10-streaming-completions.ipynb  CONFIGURING_THE_KERNEL.md
python/samples/getting_started_with_agents/: README.md
python/semantic_kernel/: __init__.py  kernel.py  kernel_base.py  kernel_pydantic.py
python/semantic_kernel/agents/: agent.py
python/semantic_kernel/contents/: __init__.py  binary_content.py  chat_history.py  chat_message_content.py  const.py  function_call_content.py  function_result_content.py  image_content.py  kernel_content.py  streaming_chat_message_content.py  streaming_text_content.py
python/semantic_kernel/core_plugins/: http_plugin.py  (+4 more)
python/tests/: conftest.py
(+7612 files in other folders)
