[project]
name = "semantic-kernel"
version = "1.8.0"
description = "Semantic Kernel Python SDK"
authors = [{ name = "Microsoft", email = "SK-Support@microsoft.com"}]
readme = "pip/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
urls = {
    homepage = "https://learn.microsoft.com/en-us/semantic-kernel/overview/",
    source = "https://github.com/microsoft/semantic-kernel/tree/main/python",
    release_notes = "https://github.com/microsoft/semantic-kernel/releases?q=tag%3Apython-1&expanded=true",
    issues = "https://github.com/microsoft/semantic-kernel/issues"
}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
aiohttp = "~3.8"
cloudevents = "~1.0"
pydantic = ">=2.0,<2.11"
numpy = "^1.25.0"
openai = ">=1.0"
jinja2 = "~3.1"

[tool.poetry.extras]
azure = ["azure-ai-inference", "azure-search-documents", "azure-core"]
google = ["google-cloud-aiplatform", "google-generativeai"]
hugging_face = ["transformers", "sentence-transformers", "torch"]
milvus = ["pymilvus", "milvus"]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.1"
pytest = "^8.2.1"
pytest-cov = ">=5.0.0"
mypy = ">=1.10.0"
ruff = ">=0.5.2,<0.7.0"

[build-system]
requires = ["flit-core >= 3.9,<4.0"]
build-backend = "flit_core.buildapi"
